--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="PreferenceScreen" parent="Theme.AppCompat.Light">
+    <style name="PreferenceScreen" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorAccent">#202020</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textColorSecondary">#505050</item>
